--- a/lists_and_tuples_practice.ipynb
+++ b/lists_and_tuples_practice.ipynb
@@ -116,10 +116,10 @@
       "id": "3c7b0e4e",
       "metadata": {
         "id": "3c7b0e4e",
-        "outputId": "0007b76a-54d8-41fd-a239-8dd06453a656",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0007b76a-54d8-41fd-a239-8dd06453a656"
       },
       "outputs": [
         {
@@ -239,10 +239,10 @@
       "id": "4cc9e135",
       "metadata": {
         "id": "4cc9e135",
-        "outputId": "97bd54de-99b2-4c4d-a054-ffc442fb3448",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "97bd54de-99b2-4c4d-a054-ffc442fb3448"
       },
       "outputs": [
         {
@@ -296,12 +296,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "1f1fbe59",
       "metadata": {
-        "id": "1f1fbe59"
+        "id": "1f1fbe59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "843e8d3d-3b35-4813-991b-0d3eac5b77cd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All students:\n",
+            "  tuple: ('Batya', 19, 'CS')\n",
+            "  tuple: ('Leeba', 20, 'Math')\n",
+            "  tuple: ('Chaya', 18, 'Biology')\n",
+            "\n",
+            "Names only:\n",
+            "  name: Batya\n",
+            "  name: Leeba\n",
+            "  name: Chaya\n"
+          ]
+        }
+      ],
       "source": [
         "# Example: list of tuples\n",
         "\n",
@@ -342,12 +362,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "d60a220f",
       "metadata": {
-        "id": "d60a220f"
+        "id": "d60a220f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "07cab5e3-cb95-4deb-fe3c-928148f012c0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All students:\n",
+            "Devorah\n",
+            "Moshe\n",
+            "Rina\n",
+            "Yitz\n",
+            "Leah\n",
+            "\n",
+            "All grades:\n",
+            "  ('Devorah', 95)\n",
+            "  ('Moshe', 88)\n",
+            "  ('Rina', 92)\n",
+            "  ('Yitz', 76)\n",
+            "  ('Leah', 99)\n",
+            "\n",
+            "High scorers: [95, 92, 99]\n"
+          ]
+        }
+      ],
       "source": [
         "grades = [\n",
         "    (\"Devorah\", 95),\n",
@@ -357,6 +403,13 @@
         "    (\"Leah\",    99)\n",
         "]\n",
         "\n",
+        "# Print all students\n",
+        "print(\"All students:\")\n",
+        "for (student, grade) in grades:\n",
+        "    print(student)\n",
+        "print()\n",
+        "\n",
+        "# This was given in assignment\n",
         "print(\"All grades:\")\n",
         "for item in grades:\n",
         "    print(\" \", item)\n",
@@ -366,6 +419,9 @@
         "high_scorers = []  # build this with a loop first\n",
         "\n",
         "#     TODO: if score >= 90, append the tuple to high_scorers\n",
+        "for (student, grade) in grades:\n",
+        "    if grade >= 90:\n",
+        "        high_scorers.append(grade)\n",
         "\n",
         "print(\"\\nHigh scorers:\", high_scorers)\n",
         "\n"
