--- a/lists_and_tuples_practice.ipynb
+++ b/lists_and_tuples_practice.ipynb
@@ -500,18 +500,39 @@
         "\n",
         "high_scorers = [\n",
         "    # TODO: put the expression here (probably a tuple)\n",
+        "    (name, score)\n",
         "    for (name, score) in grades\n",
-        "    if # TODO: put the condition here (something with score)\n",
+        "    # TODO: put the condition here (something with score)\n",
+        "    if score > 90\n",
         "]\n",
         "\n",
         "print(\"\\nHigh scorers:\", high_scorers)\n"
       ],
       "metadata": {
-        "id": "6O2CQeejuzL0"
+        "id": "6O2CQeejuzL0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c724339-fed7-41bd-8238-13be76ce008a"
       },
       "id": "6O2CQeejuzL0",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All grades:\n",
+            "  ('Devorah', 95)\n",
+            "  ('Moshe', 88)\n",
+            "  ('Rina', 92)\n",
+            "  ('Yitz', 76)\n",
+            "  ('Leah', 99)\n",
+            "\n",
+            "High scorers: [('Devorah', 95), ('Rina', 92), ('Leah', 99)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
