--- a/lists_and_tuples_practice.ipynb
+++ b/lists_and_tuples_practice.ipynb
@@ -550,14 +550,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "65fe9826",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65fe9826",
-        "outputId": "0724d5c9-6759-4ab3-e05b-82fd224baa33"
+        "outputId": "87586ff4-3de6-458d-f936-8e1b2b010de9"
       },
       "outputs": [
         {
@@ -628,12 +628,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "id": "f90d9c71",
       "metadata": {
-        "id": "f90d9c71"
+        "id": "f90d9c71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d6ecde68-9351-4322-9575-99b5b01079ae"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The average score is 88.5 and the best score is 99. Great job!\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: implement analyze_scores(scores) so that it returns (average, highest)\n",
         "\n",
@@ -641,10 +653,20 @@
         "    \"\"\"Return a tuple (average, highest) for the list of scores.\"\"\"\n",
         "    # YOUR CODE HERE\n",
         "    # 1. handle the case of an empty list if you want (optional)\n",
+        "    if not scores:\n",
+        "        # edge case: empty list\n",
+        "        return None, None\n",
         "    # 2. compute total and highest\n",
+        "    total = 0\n",
+        "    highest = scores[0]\n",
+        "    for value in scores:\n",
+        "        total += value\n",
+        "        if value > highest:\n",
+        "            highest = value\n",
         "    # 3. compute average\n",
+        "    average = total/len(scores)\n",
         "    # 4. return (average, highest)\n",
-        "    pass\n",
+        "    return average, highest\n",
         "\n",
         "\n",
         "# Test data\n",
@@ -652,9 +674,10 @@
         "\n",
         "# TODO: Call analyze_scores and unpack the result\n",
         "# avg, best = analyze_scores(scores)\n",
-        "\n",
+        "avg, best = analyze_scores(scores)\n",
         "# TODO: Print a friendly summary sentence\n",
-        "# print(...)\n"
+        "# print(...)\n",
+        "print(f\"The average score is {avg} and the best score is {best}. Great job!\")\n"
       ]
     },
     {
