--- a/lists_and_tuples_practice.ipynb
+++ b/lists_and_tuples_practice.ipynb
@@ -712,14 +712,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "27f5e462",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "27f5e462",
-        "outputId": "a513803e-424f-432e-f2d3-ff8c1c50c913"
+        "outputId": "e740ad38-c509-4387-c3b5-63f0d0b27399"
       },
       "outputs": [
         {
@@ -780,12 +780,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "2ba9d875",
       "metadata": {
-        "id": "2ba9d875"
+        "id": "2ba9d875",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "50035e01-ebf2-48dc-a96c-863ce7b908c9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "original candies: [(0, 3, 'Red'), (1, 1, 'Blue'), (4, 2, 'Green')]\n",
+            "moved candies: [(1, 3, 'Red'), (2, 1, 'Blue'), (5, 2, 'Green')]\n",
+            "redo moved candies: [(1, 3, 'Red'), (2, 1, 'Blue'), (5, 2, 'Green')]\n"
+          ]
+        }
+      ],
       "source": [
         "candies = [\n",
         "    (0, 3, \"Red\"),\n",
@@ -797,7 +811,10 @@
         "\n",
         "# TODO: build moved_candies so that each candy's row is increased by 1\n",
         "\n",
-        "moved_candies = []  # fill this with a loop\n",
+        "moved_candies = []\n",
+        "for (row, col, color) in candies:\n",
+        "    moved_candies.append((row + 1, col, color))\n",
+        "# fill this with a loop\n",
         "\n",
         "# for (row, col, color) in candies:\n",
         "#     TODO: append a new tuple with row+1\n",
@@ -805,7 +822,12 @@
         "print(\"moved candies:\", moved_candies)\n",
         "\n",
         "# STRETCH: redo moved_candies using a list comprehension:\n",
-        "# moved_candies = [ ... for ... in ... ]\n"
+        "# moved_candies = [ ... for ... in ... ]\n",
+        "moved_candies = [\n",
+        "    (row + 1, col, color)\n",
+        "    for (row, col, color) in candies\n",
+        "]\n",
+        "print(\"redo moved candies:\", moved_candies)"
       ]
     },
     {
