--- a/lists_and_tuples_practice.ipynb
+++ b/lists_and_tuples_practice.ipynb
@@ -871,7 +871,10 @@
         "\n",
         "# TODO: build red_candies using a list comprehension\n",
         "\n",
-        "red_candies = []  # replace this\n",
+        "red_candies = [\n",
+        "    (row, col, color)\n",
+        "    for (row, col, color) in candies\n",
+        "]  # replace this\n",
         "\n",
         "print(\"red candies:\", red_candies)\n"
       ]
