--- a/lists_and_tuples_practice.ipynb
+++ b/lists_and_tuples_practice.ipynb
@@ -855,12 +855,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "id": "ee45d436",
       "metadata": {
-        "id": "ee45d436"
+        "id": "ee45d436",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d024718-fd98-40c2-dc7a-e3ac4667920c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "red candies: [(0, 3, 'Red'), (2, 0, 'Red')]\n"
+          ]
+        }
+      ],
       "source": [
         "candies = [\n",
         "    (0, 3, \"Red\"),\n",
@@ -874,6 +886,7 @@
         "red_candies = [\n",
         "    (row, col, color)\n",
         "    for (row, col, color) in candies\n",
+        "    if color == \"Red\"\n",
         "]  # replace this\n",
         "\n",
         "print(\"red candies:\", red_candies)\n"
