--- a/lists_and_tuples_practice.ipynb
+++ b/lists_and_tuples_practice.ipynb
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "882177a8",
       "metadata": {
         "colab": {
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "3c7b0e4e",
       "metadata": {
         "id": "3c7b0e4e",
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "d3dd0a9d",
       "metadata": {
         "colab": {
@@ -235,14 +235,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "id": "4cc9e135",
       "metadata": {
         "id": "4cc9e135",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "97bd54de-99b2-4c4d-a054-ffc442fb3448"
+        "outputId": "c74542a6-e06b-4f44-94ba-30bb10c3b487"
       },
       "outputs": [
         {
@@ -256,7 +256,7 @@
       "source": [
         "# TODO: create and unpack a student tuple\n",
         "\n",
-        "student = (\"Sarah\", \"21\", \"math\")  # replace with your tuple, e.g. (\"Alice\", 19, \"Computer Science\")\n",
+        "student = (\"Sarah\", 21, \"math\")  # replace with your tuple, e.g. (\"Alice\", 19, \"Computer Science\")\n",
         "\n",
         "# TODO: unpack here\n",
         "# name, age, major = ...\n",
@@ -296,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "1f1fbe59",
       "metadata": {
         "id": "1f1fbe59",
@@ -362,14 +362,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 3,
       "id": "d60a220f",
       "metadata": {
         "id": "d60a220f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07cab5e3-cb95-4deb-fe3c-928148f012c0"
+        "outputId": "81fe2ab0-8e4a-485f-e67b-760d0e6b9975"
       },
       "outputs": [
         {
@@ -390,7 +390,7 @@
             "  ('Yitz', 76)\n",
             "  ('Leah', 99)\n",
             "\n",
-            "High scorers: [95, 92, 99]\n"
+            "High scorers: [('Devorah', 95), ('Rina', 92), ('Leah', 99)]\n"
           ]
         }
       ],
@@ -421,7 +421,7 @@
         "#     TODO: if score >= 90, append the tuple to high_scorers\n",
         "for (student, grade) in grades:\n",
         "    if grade >= 90:\n",
-        "        high_scorers.append(grade)\n",
+        "        high_scorers.append((student,grade))\n",
         "\n",
         "print(\"\\nHigh scorers:\", high_scorers)\n",
         "\n"
@@ -516,7 +516,7 @@
         "outputId": "6c724339-fed7-41bd-8238-13be76ce008a"
       },
       "id": "6O2CQeejuzL0",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "65fe9826",
       "metadata": {
         "colab": {
@@ -628,7 +628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "f90d9c71",
       "metadata": {
         "id": "f90d9c71",
@@ -712,7 +712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "27f5e462",
       "metadata": {
         "colab": {
@@ -780,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "2ba9d875",
       "metadata": {
         "id": "2ba9d875",
@@ -855,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "ee45d436",
       "metadata": {
         "id": "ee45d436",
