--- a/Module_12_Homework_Lists_1D_and_Nested_v2_With_4_Programming_Problems.ipynb
+++ b/Module_12_Homework_Lists_1D_and_Nested_v2_With_4_Programming_Problems.ipynb
@@ -46,11 +46,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sl99qXLulkBN",
-        "outputId": "96ce364e-b4d2-4f23-8575-7a75d5c39edb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sl99qXLulkBN",
+        "outputId": "96ce364e-b4d2-4f23-8575-7a75d5c39edb"
       },
       "execution_count": 2,
       "outputs": [
@@ -88,11 +88,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5YMjgWD9lkBO",
-        "outputId": "7e1f9128-6cc9-4b54-ffde-a1815518a00c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5YMjgWD9lkBO",
+        "outputId": "7e1f9128-6cc9-4b54-ffde-a1815518a00c"
       },
       "execution_count": 3,
       "outputs": [
@@ -132,11 +132,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "goU2MzHvlkBO",
-        "outputId": "baa1c091-50ca-4b7f-8b85-735427344f38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "goU2MzHvlkBO",
+        "outputId": "baa1c091-50ca-4b7f-8b85-735427344f38"
       },
       "execution_count": 9,
       "outputs": [
@@ -188,11 +188,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vMpmpa6GlkBO",
-        "outputId": "5055c06c-7cbc-40ab-938b-aad2b9426f71",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vMpmpa6GlkBO",
+        "outputId": "5055c06c-7cbc-40ab-938b-aad2b9426f71"
       },
       "execution_count": 10,
       "outputs": [
@@ -229,11 +229,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Yk9pzTzPlkBP",
-        "outputId": "f26bd1d1-a652-49cd-d9f3-764b495132eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Yk9pzTzPlkBP",
+        "outputId": "f26bd1d1-a652-49cd-d9f3-764b495132eb"
       },
       "execution_count": 11,
       "outputs": [
@@ -281,11 +281,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V6kw8g3klkBP",
-        "outputId": "e1068d84-7d49-4bbf-85a1-949d0c4605ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V6kw8g3klkBP",
+        "outputId": "e1068d84-7d49-4bbf-85a1-949d0c4605ab"
       },
       "execution_count": 12,
       "outputs": [
@@ -339,11 +339,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PbQWVfiBlkBP",
-        "outputId": "914419c9-9c8b-4d94-943b-910fef6def61",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PbQWVfiBlkBP",
+        "outputId": "914419c9-9c8b-4d94-943b-910fef6def61"
       },
       "execution_count": 28,
       "outputs": [
@@ -391,11 +391,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MdnGttywlkBP",
-        "outputId": "cf1de79c-908b-4cea-a9a9-d6dbf52d6666",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MdnGttywlkBP",
+        "outputId": "cf1de79c-908b-4cea-a9a9-d6dbf52d6666"
       },
       "execution_count": 29,
       "outputs": [
@@ -430,11 +430,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Jh9Pxba7lkBP",
-        "outputId": "0d415e9e-3c70-4436-c2a9-7af5065adcd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jh9Pxba7lkBP",
+        "outputId": "0d415e9e-3c70-4436-c2a9-7af5065adcd4"
       },
       "execution_count": 32,
       "outputs": [
@@ -478,13 +478,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "su0kEnIglkBP",
-        "outputId": "d14fa6ba-d247-4298-de71-3d08558b94ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "su0kEnIglkBP",
+        "outputId": "89fc1bbb-0dad-493a-bfcd-0679072ad87a"
       },
-      "execution_count": 36,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -535,10 +535,16 @@
       "metadata": {
         "id": "ZhyMG_OIlkBQ"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [],
       "source": [
-        "# TODO: Write list to file\n"
+        "# TODO: Write list to file\n",
+        "\n",
+        "items = [\"cake\",\"cookies\",\"donut\",\"cupcake\"]\n",
+        "\n",
+        "with open(\"items.txt\", \"w\") as f:\n",
+        "    for item in items:\n",
+        "        f.write(item + \"\\n\")"
       ],
       "id": "ZhyMG_OIlkBQ"
     },
@@ -562,7 +568,13 @@
       "execution_count": null,
       "outputs": [],
       "source": [
-        "# TODO: Read file into list\n"
+        "# TODO: Read file into list\n",
+        "items_from_file = []\n",
+        "\n",
+        "with open(\"items.txt\", \"r\") as f:\n",
+        "    for line in f:\n",
+        "        items_from_file.append(line.strip())\n",
+        "print(items_from_file)"
       ],
       "id": "YXwOlkDrlkBQ"
     },
